# CMakeSimplestDemo

./: .gitignore  README.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/include/: com_example_gzx_ndk_build_NativeUtils.h
app/src/androidTest/java/com/example/gzx/cmakesimplestdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c
app/src/main/java/com/example/gzx/cmakesimplestdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/gzx/cmakesimplestdemo/: ExampleUnitTest.java
